--- a/Block2Challenge/style.css
+++ b/Block2Challenge/style.css
@@ -2,6 +2,7 @@ body{
   text-align: center;
   background-color: rgb(84, 78, 85);
   color: white;
+  font-size:larger;
 }
 .halfBr {
 margin-bottom: 0.5em;
